# ossature

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE.md  Makefile  README.md  codecov.yml  cspell.json  mkdocs.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: index.md
docs/advanced/: build-system.md  context.md  multi-spec.md  prompts.md
docs/cli/: commands.md
docs/configuration/: ossature-toml.md
docs/getting-started/: installation.md  quickstart.md  workflow.md
docs/overrides/: main.html
docs/specs/: amd.md  overview.md  smd.md
examples/math_quest/: ntt.toml
examples/math_quest/specs/: math_game.amd  math_game.smd
src/ntt/: __init__.py
src/ntt/audit/: audit.py  context.py  fixer.py  graph.py  interfaces.py  manifest.py  planner.py  prompts.py
src/ntt/cli/: __init__.py  decorators.py  main.py
src/ntt/cli/commands/: audit.py  build.py  clean.py  init.py  new.py  retry.py  status.py  validate.py
src/ntt/cli/wizard/: amd.py  smd.py
src/ntt/config/: loader.py
src/ntt/models/: amd.py  audit.py  plan.py  smd.py
src/ntt/parsers/: amd.py  smd.py
src/ntt/renderer/: amd.py  smd.py
src/ntt/shared/: __init__.py
src/ntt/templates/: manager.py
src/ntt/templates/files/: config.template  gitignore.template
src/ossature/: __init__.py
src/ossature/audit/: audit.py  context.py  fixer.py  graph.py  interfaces.py  manifest.py  planner.py  prompts.py  verify_validator.py
src/ossature/cli/: __init__.py  decorators.py  main.py
src/ossature/cli/commands/: audit.py  build.py  clean.py  init.py  new.py  retry.py  status.py  validate.py
src/ossature/cli/wizard/: amd.py  smd.py
src/ossature/config/: loader.py
src/ossature/models/: amd.py  audit.py  plan.py  review.py  shared.py  smd.py
src/ossature/parsers/: amd.py  frontmatter.py  smd.py
src/ossature/promptspec/: __init__.py  profile.py  renderer.py  spec.py
src/ossature/promptspec/profiles/: __init__.py  generic.py  javascript.py  lua.py  python.py  rust.py  typescript.py  zig.py
src/ossature/promptspec/specs/: __init__.py
src/ossature/renderer/: amd.py  smd.py
src/ossature/shared/: __init__.py  hashing.py  llm.py
src/ossature/templates/: manager.py
src/ossature/templates/files/: config.template  gitignore.template
tests/: conftest.py  test_cli.py
tests/integration/: helpers.py  test_clean.py  test_cli.py  test_new.py  test_status.py  test_validate.py  test_workflow.py
tests/unit/: test_audit_cross_spec_input.py  test_audit_io.py  test_audit_read_numbered.py  test_build_copy.py  test_build_interface_extraction.py  test_build_modes.py  test_build_prompt.py  test_build_setup.py  test_build_state.py  test_build_task.py  test_config.py  test_decorators.py  test_file_ownership.py  test_fix_prompt.py  test_fixer.py  test_interfaces.py  test_language_profiles.py  test_llm_error_handling.py  test_llm_run_error.py  test_models_plan.py  test_parsers_amd.py  test_parsers_smd.py  test_planner.py  test_promptspec.py  test_promptspec_snapshots.py  test_renderer_amd.py  test_renderer_smd.py  test_retry.py  test_sandbox.py  test_templates.py  test_usage_tracker.py  test_verify_classification.py  test_verify_validator.py  test_wizard_amd.py  test_wizard_smd.py
tests/unit/fixtures/promptspec/: audit.cross_spec_audit__python.txt  audit.cross_spec_audit__rust.txt  audit.interface_inference__python.txt  audit.interface_inference__rust.txt  audit.plan_generation__elixir.txt  audit.plan_generation__javascript.txt  audit.plan_generation__lua.txt  audit.plan_generation__python.txt  audit.plan_generation__rust.txt  audit.plan_generation__typescript.txt  audit.plan_generation__zig.txt  audit.plan_initial__elixir.txt  audit.plan_initial__javascript.txt  audit.plan_initial__lua.txt  audit.plan_initial__python.txt  audit.plan_initial__rust.txt  audit.plan_initial__typescript.txt  audit.plan_initial__zig.txt  audit.plan_replan__elixir.txt  audit.plan_replan__javascript.txt  audit.plan_replan__lua.txt  audit.plan_replan__python.txt  audit.plan_replan__rust.txt  audit.plan_replan__typescript.txt  audit.plan_replan__zig.txt  (+13 more)
(+7 files in other folders)
