[project]
name = "ntt"
version = "0.1.0"
description = "Specifiction and architecture driven code generation toolkit."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Beshr Kayali Reinholdsson", email = "me@beshr.com" }
]
requires-python = ">=3.14"
dependencies = [
    "click>=8.3.1",
    "content-types>=0.3.0",
    "pydantic>=2.12.5",
    "pydantic-ai>=1.62.0",
    "questionary>=2.1.1",
    "rich>=14.3.2",
    "tomli>=2.4.0",
    "tomli-w>=1.2.0",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-cov>=4.0.0",
    "ruff>=0.15.0",
]

[project.scripts]
ntt = "ntt.cli:app"

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"


[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.14"
strict = true
warn_unreachable = true
