[project]
name = "ossature"
version = "0.0.2"
description = "Specification and architecture driven code generation toolkit."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Beshr Kayali Reinholdsson", email = "me@beshr.com" }
]
requires-python = ">=3.14"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Typing :: Typed",
]
dependencies = [
    "click>=8.3.1",
    "content-types>=0.3.0",
    "genai-prices>=0.0.51",
    "pydantic>=2.12.5",
    "pydantic-ai>=1.62.0",
    "questionary>=2.1.1",
    "rich>=14.3.2",
    "tomli>=2.4.0",
    "tomli-w>=1.2.0",
]

[project.urls]
Homepage = "https://docs.ossature.dev"
Repository = "https://github.com/ossature/ossature"
Documentation = "https://docs.ossature.dev"
Changelog = "https://github.com/ossature/ossature/blob/master/CHANGELOG.md"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-cov>=4.0.0",
    "ruff>=0.15.0",
    "mkdocs<2.0",
    "mkdocs-material>=9.7.1",
]

[project.scripts]
ossature = "ossature.cli:app"

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"


[tool.uv]
exclude-newer = "7 days"

# mistralai 2.x removed the Mistral class that pydantic-ai imports
constraint-dependencies = ["mistralai<2"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "S", "SIM", "PT", "RUF", "C4", "PIE", "PLC0415"]
ignore = ["S602", "S110", "S310"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]
"src/**/*.py" = ["PLC0415"]

[tool.mypy]
python_version = "3.14"
strict = true
warn_unreachable = true
